<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.VerificationCodeFragment"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

    <TextView
            android:id="@+id/verifyingNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp"
            android:text="@string/verifying_your_phone_number"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/secondaryTextColor"/>

    <TextView
            android:id="@+id/intro3TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/verifyingNumberTextView"
            android:text="@string/intro_3"
            android:textColor="@color/secondaryTextColor"
            android:textSize="15sp"/>

    <TextView
            android:id="@+id/wrongNumberTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/intro3TextView"
            android:text="@string/wrong_number"
            android:textColor="@color/secondaryTextColor"
            android:textStyle="bold"
            android:textSize="15sp"/>

    <com.chaos.view.PinView
            android:id="@+id/verificationCodePinView"
            style="@style/PinWidget.PinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/wrongNumberTextView"
            android:layout_marginTop="64dp"
            android:inputType="phone"
            android:enabled="false"
            app:cursorColor="@color/primaryColor"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            android:hint="@string/dashes"
            android:cursorVisible="false"
            app:itemCount="6"
            app:itemHeight="32dp"
            app:itemSpacing="16dp"
            app:itemWidth="32dp"
            app:lineWidth="2dp"
            app:viewType="line"/>

    <TextView
            android:id="@+id/intro4TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/verificationCodePinView"
            android:layout_marginTop="16dp"
            android:text="@string/intro_4"
            android:textAlignment="center"
            android:textColor="@color/secondaryTextColor"/>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/resendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/intro4TextView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="64dp"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/resend_sms"
            android:enabled="false"/>


</androidx.constraintlayout.widget.ConstraintLayout>